flux/academy/observability/gatus/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gatus-ingress
spec:
  ingressClassName: nginx-internal
  rules:
    - host: status.chancey.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gatus
                port:
                  number: 8080
  tls:
    - hosts:
        - status.chancey.dev
